# nd-direct-s3

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  Tensorizer.cpp  Tensorizer.h  check_format.sh  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
cpp/: main.cpp
tensorizer/cpp/: CMakeLists.txt  Tensorizer.cpp  Tensorizer.h  TensorizerCInterface.cpp  TensorizerCInterface.h  main.cpp
tensorizer/python/: tensorizer.py
utils/: aws_clients.py  benchmark_tensor_reads.py  generate_random_tensors.py  tensor_constants.py
