cmake_minimum_required(VERSION 3.7)
project(nd-direct-s3)
set(CMAKE_CXX_STANDARD 17)
find_package(Threads REQUIRED)
add_executable(nd-direct-s3 main.cpp)
include_directories('/opt/deps/incubator-mxnet/build/mklml/mklml_lnx_2019.0.5.20190502/')
target_link_libraries(nd-direct-s3 aws-c-common aws-c-event-stream aws-checksums aws-cpp-sdk-core aws-cpp-sdk-s3 Threads::Threads mxnet)
