cmake_minimum_required(VERSION 3.9)
project(tensorizer VERSION 0.0.1 DESCRIPTION "Library to load tensors directly from cloud storage to deep learning frameworks.")
set(CMAKE_CXX_STANDARD 17)
find_package(Threads REQUIRED)
add_executable(nd-direct-s3 main.cpp Tensorizer.cpp)
add_library(tensorizer SHARED main.cpp Tensorizer.cpp TensorizerCInterface.cpp)
include_directories('/opt/deps/incubator-mxnet/build/mklml/mklml_lnx_2019.0.5.20190502/')
target_link_libraries(nd-direct-s3 aws-c-common aws-c-event-stream aws-checksums aws-cpp-sdk-core aws-cpp-sdk-s3 Threads::Threads mxnet)
set_target_properties(tensorizer PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION 0)
target_link_libraries(tensorizer aws-c-common aws-c-event-stream aws-checksums aws-cpp-sdk-core aws-cpp-sdk-s3 Threads::Threads mxnet)
